--- a/app/assets/stylesheets/components/_project_cards.scss
+++ b/app/assets/stylesheets/components/_project_cards.scss
@@ -1,22 +1,48 @@
 .project-cards {
   display:grid;
   grid-template-columns: 1fr 1fr;
-  grid-column-gap: 50px;
+  grid-column-gap: 20px;
+  grid-row-gap: 170px;
 }
 
-.project-column {
-  display:grid;
-  grid-row-gap: 50px;
-  .project-card {
-    border: 1px solid $light-gray;
-    border-radius: 4px;
+.project-card {
+  box-shadow: 0px 0px 3px $light-gray;
+  background-color: white;
+  overflow: hidden;
+  max-height: 500px;
+  border-radius: 5px;
+  h3 {
+    padding: 20px;
+  }
+  img {
+    margin-top: 100px;
+    transform: rotate(-5deg);
+  }
+
+}
+
+.project-card:nth-of-type(odd) {
+  margin-top: -150px;
+}
+
+.project-card:nth-of-type(even) {
+  margin-bottom: -150px;
+}
+
+#work {
+  margin-top: 200px;
+}
+
+@media (min-width: 100px) and (max-width: 767px) {
+  .project-cards {
+    grid-template-columns: 1fr;
+    grid-gap: 10px;
+  }
+
+  .project-card:nth-of-type(odd),
+  .project-card:nth-of-type(even) {
+    margin-top: 0px;
+    margin-bottom: 0px;
   }
 }
 
-.project-column.even {
-  margin-top: 80px;
-}
-
-.project-column.odd {
-  margin-bottom: 80px;
-}
