--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -10,26 +10,14 @@
   </div>
 
 
-  <div class="section" id="#work">
+  <div class="section" id="work">
     <div class="project-cards">
-      <div class="project-column odd">
-        <% @odd_projects.reverse.each do |project| %>
-            <div class="project-card">
-              <h3><%= project.name %></h3>
-              <%= cl_image_tag project.cover_photo.key, crop: :fill  %>
-            </div>
-        <% end %>
-      </div>
-
-      <div class="project-column even">
-        <% @even_projects.reverse.each do |project| %>
-            <div class="project-card">
-              <h3><%= project.name %></h3>
-              <%= cl_image_tag project.cover_photo.key, width: 400, height: 300, crop: :fill  %>
-            </div>
-        <% end %>
-      </div>
-    </div>
+      <% @projects.reverse.each do |project| %>
+          <div class="project-card">
+            <h3><%= project.name %></h3>
+            <%= cl_image_tag project.cover_photo.key, crop: :fill, width: 600 %>
+          </div>
+      <% end %>
   </div>
 
 </div>
