--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,3 +12,12 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  margin-bottom: 200px;
+}
