--- a/app/assets/stylesheets/components/_intro.scss
+++ b/app/assets/stylesheets/components/_intro.scss
@@ -1,11 +1,26 @@
 .intro {
   display:flex;
   justify-content: space-around;
-  margin-top: 50px;
   .intro-left,
   .intro-right {
     flex-basis: 50%;
   }
 }
 
+.intro-right {
+  display: flex;
+  flex-direction: column;
+  img {
+    margin: 0 auto;
+  }
+  h2 {
+    margin-top: -40px;
+  }
+}
 
+@media (min-width: 100px) and (max-width: 767px) {
+  .intro {
+    margin-top: 10px;
+    flex-direction: column;
+  }
+}
