--- a/app/assets/stylesheets/components/_project_cards.scss
+++ b/app/assets/stylesheets/components/_project_cards.scss
@@ -6,7 +6,8 @@
 }
 
 .project-card {
-  box-shadow: 0px 0px 3px $light-gray;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, .2);
+  border: 1px solid rgba(0, 0, 0, .2);
   background-color: white;
   overflow: hidden;
   max-height: 500px;
@@ -15,8 +16,7 @@
     padding: 20px;
   }
   img {
-    margin-top: 100px;
-    transform: rotate(-5deg);
+    width:100%;
   }
 
 }
@@ -29,8 +29,9 @@
   margin-bottom: -150px;
 }
 
-#work {
-  margin-top: 200px;
+#works {
+  margin-top: 50px;
+  padding-top: 200px;
 }
 
 @media (min-width: 100px) and (max-width: 767px) {
@@ -43,6 +44,10 @@
   .project-card:nth-of-type(even) {
     margin-top: 0px;
     margin-bottom: 0px;
+  }
+
+  #works {
+    padding-top:50px;
   }
 }
 
