--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -6,5 +6,5 @@ $blue: #167FFB;
 $yellow: #FFC65A;
 $orange: #E67E22;
 $green: #1EDD88;
-$gray: #0E0000;
+$gray: rgb(50, 50, 50);
 $light-gray: #E4E4E4;
