--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,23 +1,39 @@
 <div class="container">
   <div class="intro">
-    <div class="intro-left">
+    <div class="intro-left simple-flexbox">
       <h1>renodor</h1>
     </div>
     <div class="intro-right">
+      <%= image_tag("renodor.jpg") %>
       <h2>Digital Marketing Specialist & Fullstack Web Developer</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, modi!</p>
     </div>
   </div>
 
 
-  <div class="section" id="work">
+  <div class="section" id="services">
+    <div class="service-cards simple-flexbox">
+      <div class="service">
+        <p>Web Development</p>
+      </div>
+      <div class="service">
+        <p>Digital Marketing</p>
+      </div>
+      <div class="service">
+        <p>Graphic Design</p>
+      </div>
+    </div>
+  </div>
+  <div class="section" id="works">
     <div class="project-cards">
       <% @projects.reverse.each do |project| %>
           <div class="project-card">
             <h3><%= project.name %></h3>
-            <%= cl_image_tag project.cover_photo.key, crop: :fill, width: 600 %>
+            <%= image_tag(project.id.to_s) %>
           </div>
       <% end %>
+    </div>
   </div>
 
 </div>
+
