--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,10 +7,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <%= link_to "Services", "#", class: "nav-link" %>
+        <%= link_to "Services", "#services", class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <%= link_to "Works", "#", class: "nav-link" %>
+        <%= link_to "Works", "#works", class: "nav-link" %>
       </li>
       <li class="nav-item">
         <%= link_to "Contact", "#", class: "nav-link" %>
