--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,12 +1,15 @@
 <div class="container">
   <div class="intro">
     <div class="intro-left simple-flexbox">
-      <h1>renodor</h1>
+      <div>
+        <h1>renodor</h1>
+        <h2>Digital Marketing Specialist & Fullstack Web Developer</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, modi!</p>
+
+      </div>
     </div>
     <div class="intro-right">
-      <%= image_tag("renodor.jpg") %>
-      <h2>Digital Marketing Specialist & Fullstack Web Developer</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, modi!</p>
+      <%= image_tag("renodor-avatar.png") %>
     </div>
   </div>
 
@@ -14,13 +17,13 @@
   <div class="section" id="services">
     <div class="service-cards simple-flexbox">
       <div class="service">
-        <p>Web Development</p>
+        <i class="fas fa-code"></i><br><p>Web<br>Development</p>
       </div>
       <div class="service">
-        <p>Digital Marketing</p>
+        <i class="fas fa-chart-bar"></i><br><p>Digital<br>Marketing</p>
       </div>
       <div class="service">
-        <p>Graphic Design</p>
+        <i class="fas fa-pencil-alt"></i><br><p>Graphic<br>Design</p>
       </div>
     </div>
   </div>
