--- a/app/assets/stylesheets/components/_service_cards.scss
+++ b/app/assets/stylesheets/components/_service_cards.scss
@@ -1,14 +1,20 @@
 .service {
   background-color:white;
-  flex-basis: 20%;
+  flex-basis: 25%;
   text-align: center;
   padding: 30px;
   margin: 0px 10px;
-  border: 1px solid rgba(0, 0, 0, .2);
-  max-width: 170px;
+  border: 2px solid #323232;
+  box-shadow: 6px 4px 1px #61e786;
+  // max-width: 170px;
   border-radius: 5px;
   p {
     margin-bottom: 0px;
+  }
+  i {
+    color: #61e786;
+    font-size: 30px;
+    margin-bottom: 10px;
   }
 }
 
