--- a/app/assets/stylesheets/components/_project_cards.scss
+++ b/app/assets/stylesheets/components/_project_cards.scss
@@ -7,34 +7,46 @@
 
 .project-card {
   // box-shadow: 0px 0px 3px rgba(0, 0, 0, .2);
-  border: 1px solid rgba(0, 0, 0, .2);
+  border: 2px solid #323232;
   background-color: white;
   overflow: hidden;
   max-height: 500px;
   border-radius: 5px;
-  transition: background 250ms ease;
+  transition: all 250ms ease;
   h3 {
     padding: 40px;
     // color: #737373;
     color: #323232;
     transition: transform 250ms ease;
+
   }
   img {
     margin-top: 50px;
     transform: translate(-6%) rotate(-10deg);
     transition: all 250ms ease;
   }
-
+  i {
+    color: transparent;
+    margin-left: 5px;
+    font-size: 20px;
+    transition: transform 350ms ease;
+  }
 }
 
 .project-card:hover {
   // background-color: #f7f7f7;
   background-color: #323232;
+  box-shadow: 6px 4px 1px $green;
   h3 {
     color: white;
+    transform: translate(5%);
   }
   img {
     transform: translate(-6%, -10%) rotate(-10deg);
+  }
+  i {
+    color: white;
+    transform: translate(50%);
   }
 }
 
@@ -50,12 +62,17 @@
 #works {
   margin-top: 50px;
   padding-top: 200px;
+  padding-bottom: 200px;
 }
 
 @media (min-width: 100px) and (max-width: 767px) {
   .project-cards {
     grid-template-columns: 1fr;
     grid-gap: 10px;
+  }
+
+  .project-card {
+    max-height: 400px;
   }
 
   .project-card:nth-of-type(odd),
