--- a/app/assets/stylesheets/components/_service_cards.scss
+++ b/app/assets/stylesheets/components/_service_cards.scss
@@ -5,24 +5,19 @@
   padding: 30px;
   margin: 0px 10px;
   border: 2px solid #323232;
-  box-shadow: 6px 4px 1px #61e786;
+  box-shadow: 6px 4px 1px $green;
   // max-width: 170px;
   border-radius: 5px;
   p {
     margin-bottom: 0px;
   }
   i {
-    color: #61e786;
+    color: $green;
     font-size: 30px;
     margin-bottom: 10px;
   }
 }
 
-
-#services {
-  margin-top: 50px;
-  padding-top:50px;
-}
 
 @media (min-width: 100px) and (max-width: 767px) {
   .service-cards {
@@ -31,7 +26,9 @@
 
   .service {
     margin: 10px;
+    min-width: 200px;
   }
+
   #services {
     margin-top: 0px;
   }
