--- a/app/assets/stylesheets/config/_utilities.scss
+++ b/app/assets/stylesheets/config/_utilities.scss
@@ -3,3 +3,18 @@
   justify-content: center;
   align-items: center;
 }
+
+.translate-150 {
+  transform: translate(0px, -150px);
+}
+
+
+.titles {
+  font-weight: 600;
+  text-shadow: 4px 2px 1px $green;
+  margin-bottom: 30px;
+}
+
+.section {
+  padding-top: 50px;
+}
