--- a/app/assets/stylesheets/config/_utilities.scss
+++ b/app/assets/stylesheets/config/_utilities.scss
@@ -9,9 +9,8 @@
 }
 
 
-.titles {
-  font-weight: 600;
-  text-shadow: 4px 2px 1px $green;
+.title {
+  text-shadow: 3px 2px 1px $green;
   margin-bottom: 30px;
 }
 
