--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,6 +1,8 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
+@import "btn";
+@import "form";
 @import "intro";
 @import "navbar";
 @import "project_cards";
