--- a/app/assets/stylesheets/components/_project_cards.scss
+++ b/app/assets/stylesheets/components/_project_cards.scss
@@ -59,7 +59,7 @@
   margin-bottom: -150px;
 }
 
-#works {
+#projects {
   margin-top: 50px;
   padding-top: 200px;
   padding-bottom: 200px;
@@ -81,7 +81,7 @@
     margin-bottom: 0px;
   }
 
-  #works {
+  #projects {
     padding-top:50px;
   }
 }
