--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,74 @@
 
+<div class="container">
+  <div class="intro">
+    <div class="intro-left simple-flexbox">
+      <div>
+        <h1>renodor</h1>
+        <h2>Digital Marketing Specialist & Fullstack Web Developer</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, modi!</p>
+
+      </div>
+    </div>
+    <div class="intro-right">
+      <%= image_tag("renodor-avatar.png") %>
+    </div>
+  </div>
+
+  <div class="section" id="services">
+    <h2 class="title">Services</h2>
+    <div class="service-cards simple-flexbox">
+      <div class="service">
+        <i class="fas fa-code"></i><br><p>Web<br>Development</p>
+      </div>
+      <div class="service">
+        <i class="fas fa-chart-bar"></i><br><p>Digital<br>Marketing</p>
+      </div>
+      <div class="service">
+        <i class="fas fa-pencil-alt"></i><br><p>Graphic<br>Design</p>
+      </div>
+    </div>
+  </div>
+  <div class="section" id="projects">
+    <h2 class="title translate-150">Projects</h2>
+    <div class="project-cards">
+      <% @projects.reverse.each do |project| %>
+          <div class="project-card">
+            <h3><%= project.name %> <i class="fas fa-arrow-right"></i></h3>
+            <%= image_tag(project.id.to_s) %>
+          </div>
+      <% end %>
+    </div>
+  </div>
+
+  <div class="section" id="contact">
+    <h2 class="title">Contact Me</h2>
+    <div class="social">
+      <i class="fab fa-linkedin-in"></i>
+      <i class="fab fa-github"></i>
+      <i class="fab fa-twitter"></i>
+      <i class="fas fa-envelope"></i>
+    </div>
+    <div class="contact-form">
+      <%= form_for(@contact) do |f| %>
+        <div class="row">
+          <div class="col-xs-12 col-sm-6">
+            <div class="form-group">
+              <%= f.text_field :name, placeholder: "name", class: "form-control"%>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6">
+            <div class="form-group">
+              <%= f.text_field :email, placeholder: "email", class: "form-control" %>
+            </div>
+          </div>
+        </div>
+        <div class="form-group">
+          <%= f.text_area :message, placeholder: "message", class: "form-control" %>
+        </div>
+        <div class="actions">
+          <%= f.submit "SEND", class: "ren-btn" %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
