--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,7 +10,7 @@
         <%= link_to "Services", "#services", class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <%= link_to "Works", "#works", class: "nav-link" %>
+        <%= link_to "Projects", "#projects", class: "nav-link" %>
       </li>
       <li class="nav-item">
         <%= link_to "Contact", "#", class: "nav-link" %>
