--- a/app/assets/stylesheets/components/_project_cards.scss
+++ b/app/assets/stylesheets/components/_project_cards.scss
@@ -62,13 +62,13 @@
 #projects {
   margin-top: 50px;
   padding-top: 200px;
-  padding-bottom: 200px;
+  padding-bottom: 50px;
 }
 
 @media (min-width: 100px) and (max-width: 767px) {
   .project-cards {
     grid-template-columns: 1fr;
-    grid-gap: 10px;
+    grid-gap: 20px;
   }
 
   .project-card {
@@ -83,6 +83,7 @@
 
   #projects {
     padding-top:50px;
+    padding-bottom: 0;
   }
 }
 
