--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
         <%= link_to "Projects", "#projects", class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <%= link_to "Contact", "#", class: "nav-link" %>
+        <%= link_to "Contact", "#contact", class: "nav-link" %>
       </li>
     </ul>
   </div>
