--- a/app/views/shared/_flashes.html.erb
+++ b/app/views/shared/_flashes.html.erb
@@ -1,14 +1,14 @@
-<% if params[:flash] %>
+<% if notice %>
     <div class="alert alert-warning alert-dismissible simple-flexbox" role="alert">
-      <p><%= params[:flash] %></p>
+      <p><%= notice %></p>
       <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
     </div>
 <% end %>
 
-<% if notice %>
+<% if alert %>
   <div class="alert alert-info alert-dismissible" role="alert">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    <%= notice %>
+    <%= alert %>
   </div>
 <% end %>
 
