--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -49,7 +49,7 @@
       <i class="fas fa-envelope"></i>
     </div>
     <div class="contact-form">
-      <%= form_for(@contact) do |f| %>
+      <%= form_for(@contact, remote: true)  do |f| %>
         <div class="row">
           <div class="col-xs-12 col-sm-6">
             <div class="form-group">
@@ -57,13 +57,19 @@
             </div>
           </div>
           <div class="col-xs-12 col-sm-6">
-            <div class="form-group">
+            <div class="form-group <%= @email_errors ? 'form-group-error' : '' %>">
               <%= f.text_field :email, placeholder: "email", class: "form-control" %>
+              <% if @email_errors %>
+                <span class="form-error-message"><%= @email_errors.first %></span>
+              <% end %>
             </div>
           </div>
         </div>
-        <div class="form-group">
+        <div class="form-group <%= @message_errors ? 'form-group-error' : '' %>">
           <%= f.text_area :message, placeholder: "message", class: "form-control" %>
+            <% if @message_errors %>
+              <span class="form-error-message"><%= @message_errors.first %></span>
+            <% end %>
         </div>
         <div class="actions">
           <%= f.submit "SEND", class: "ren-btn" %>
@@ -72,3 +78,4 @@
     </div>
   </div>
 </div>
+
