improve project cards images so that they always keep the same ratio

--- a/app/assets/stylesheets/components/_project_cards.scss
+++ b/app/assets/stylesheets/components/_project_cards.scss
@@ -6,23 +6,21 @@
 }
 
 .project-card {
-  // box-shadow: 0px 0px 3px rgba(0, 0, 0, .2);
   border: 2px solid #323232;
   background-color: white;
   overflow: hidden;
-  max-height: 500px;
   border-radius: 5px;
   transition: all 250ms ease;
   h3 {
-    padding: 40px;
-    // color: #737373;
+    padding: 40px 20px 20px 20px;
     color: #323232;
     transition: transform 250ms ease;
 
   }
   img {
+    width: 116%;
     margin-top: 50px;
-    transform: translate(-6%) rotate(-10deg);
+    transform: translate(-6%, 20%) rotate(-10deg);
     transition: all 250ms ease;
   }
   i {
@@ -34,7 +32,6 @@
 }
 
 .project-card:hover {
-  // background-color: #f7f7f7;
   background-color: #323232;
   box-shadow: 6px 4px 1px $green;
   h3 {
@@ -42,7 +39,7 @@
     transform: translate(5%);
   }
   img {
-    transform: translate(-6%, -10%) rotate(-10deg);
+    transform: translate(-6%, 10%) rotate(-10deg);
   }
   i {
     color: white;
@@ -71,9 +68,6 @@
     grid-gap: 20px;
   }
 
-  .project-card {
-    max-height: 400px;
-  }
 
   .project-card:nth-of-type(odd),
   .project-card:nth-of-type(even) {
