--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -33,7 +33,10 @@
     <div class="project-cards">
       <% @projects.reverse.each do |project| %>
           <div class="project-card">
-            <h3><%= project.name %> <i class="fas fa-arrow-right"></i></h3>
+            <div class="project-header">
+              <h3><%= project.name %></h3>
+              <i class="fas fa-code"></i><i class="fas fa-pencil-alt"></i><i class="fas fa-chart-bar"></i>
+            </div>
             <%= cl_image_tag project.cover_photo.key %>
           </div>
       <% end %>
