--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -35,7 +35,9 @@
           <div class="project-card">
             <div class="project-header">
               <h3><%= project.name %></h3>
-              <i class="fas fa-code"></i><i class="fas fa-pencil-alt"></i><i class="fas fa-chart-bar"></i>
+              <% if project.web_development %><i class="fas fa-code"></i> <% end %>
+              <% if project.marketing %><i class="fas fa-chart-bar"></i> <% end %>
+              <% if project.graphic_design %><i class="fas fa-pencil-alt"></i> <% end %>
             </div>
             <%= cl_image_tag project.cover_photo.key %>
           </div>
