add order to projects. Create simple index table

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -6,5 +6,6 @@
 @import "intro";
 @import "navbar";
 @import "project_cards";
+@import "project_index";
 @import "service_cards";
 @import "social";
