add project show

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -7,5 +7,6 @@
 @import "navbar";
 @import "project_cards";
 @import "project_index";
+@import "project_show";
 @import "service_cards";
 @import "social";
