--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,17 +1,26 @@
 <div class="container project-show">
-  <h2 class="title"><%= @project.name %></h2>
-  <p><i class="fas fa-external-link-alt"></i> <%= link_to "Visit website", @project.url, target: "_blank" %></p>
-  <p class="description"><%= raw @project.description %></p>
-  <p><b>What I did on this project</b></p>
-  <ul class="list-unstyled">
-    <% if @project.web_development %><li class="ml-3"><i class="fas fa-code"></i> Web Development</li><% end %>
-    <% if @project.marketing %><li class="ml-3"><i class="fas fa-chart-bar"></i> Digital Marketing</li><% end %>
-    <% if @project.graphic_design %><li class="ml-3"><i class="fas fa-pencil-alt"></i> Graphic Design</li><% end %>
-  </ul>
-  <p class="cover-photo"><%= cl_image_tag @project.cover_photo.key %></p>
+  <div class="project-show-info">
+    <h2 class="title"><%= @project.name %></h2>
+    <p><i class="fas fa-external-link-alt"></i> <%= link_to "Visit website", @project.url, target: "_blank" %></p>
+    <p class="description"><%= raw @project.description %></p>
+    <p><b>What I did on this project</b></p>
+    <ul class="list-unstyled">
+      <% if @project.web_development %><li class="ml-3"><i class="fas fa-code"></i> Web Development</li><% end %>
+      <% if @project.marketing %><li class="ml-3"><i class="fas fa-chart-bar"></i> Digital Marketing</li><% end %>
+      <% if @project.graphic_design %><li class="ml-3"><i class="fas fa-pencil-alt"></i> Graphic Design</li><% end %>
+    </ul>
+
+    <p><b>Technologie used</b></p>
+    <ul class="list-unstyled">
+      <span>HTML</span> <span>CSS</span> <span>Ruby</span> <span>Rails</span>
+    </ul>
+  </div>
+  <div class="project-show-images">
+    <p class="cover-photo"><%= cl_image_tag @project.cover_photo.key %></p>
+    <% @project.photos.each do |photo| %>
+      <%= cl_image_tag photo.key %>
+    <% end %>
+  </div>
 
 
-  <% @project.photos.each do |photo| %>
-    <%= cl_image_tag photo.key %>
-  <% end %>
 </div>
