adding new technologies column to projects (array)

--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -3,6 +3,11 @@
     <%= f.input :name %>
     <%= f.input :description %>
     <%= f.input :url %>
+    <%= f.input :order %>
+    <%= f.input :web_development %>
+    <%= f.input :marketing %>
+    <%= f.input :graphic_design %>
+    <%= f.input :technologies %>
     <%= f.input :cover_photo, as: :file %>
     <%= f.input :photos, as: :file, input_html: { multiple: true } %>
     <%= f.submit %>
