--- a/app/assets/stylesheets/components/_project_show.scss
+++ b/app/assets/stylesheets/components/_project_show.scss
@@ -25,6 +25,8 @@
     border: 2px solid $gray;
     border-radius: 5px;
     padding: 5px 10px;
+    display:inline-block;
+    margin-bottom: 5px;
   }
 }
 
