--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -7,6 +7,7 @@
     <%= f.input :web_development %>
     <%= f.input :marketing %>
     <%= f.input :graphic_design %>
+    <%= f.input :technologies %>
     <%= f.input :cover_photo, as: :file %>
     <%= f.input :photos, as: :file, input_html: { multiple: true } %>
     <%= f.submit %>
