--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,13 +10,13 @@
         <%= link_to "Home", root_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <%= link_to "Services", "#services", class: "nav-link" %>
+        <%= link_to "Services", root_path(anchor: 'services'), class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <%= link_to "Projects", "#projects", class: "nav-link" %>
+        <%= link_to "Projects", root_path(anchor: 'projects'), class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <%= link_to "Contact", "#contact", class: "nav-link" %>
+        <%= link_to "Contact", root_path(anchor: 'contact'), class: "nav-link" %>
       </li>
     </ul>
   </div>
