add link to social icons + configure written email

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,6 +2,7 @@
 @import "alert";
 @import "avatar";
 @import "btn";
+@import "contact";
 @import "form";
 @import "intro";
 @import "navbar";
@@ -9,4 +10,3 @@
 @import "project_index";
 @import "project_show";
 @import "service_cards";
-@import "social";
