--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -49,10 +49,13 @@
   <div class="section" id="contact">
     <h2 class="title">Contact Me</h2>
     <div class="social">
-      <i class="fab fa-linkedin-in"></i>
-      <i class="fab fa-github"></i>
-      <i class="fab fa-twitter"></i>
-      <i class="fas fa-envelope"></i>
+      <div class="social-icons">
+        <a href="https://www.linkedin.com/in/renauddor/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://github.com/renodor" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://twitter.com/Renodor" target="_blank"><i class="fab fa-twitter"></i></a>
+        <i class="fas fa-envelope"></i>
+      </div>
+      <span class="written-email"></span>
     </div>
     <div class="contact-form">
       <%= form_for(@contact, remote: true)  do |f| %>
