create illustration show

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,6 +4,7 @@
 @import "btn";
 @import "contact";
 @import "form";
+@import "gallery";
 @import "intro";
 @import "navbar";
 @import "project_cards";
