--- a/app/assets/stylesheets/components/_gallery.scss
+++ b/app/assets/stylesheets/components/_gallery.scss
@@ -6,8 +6,19 @@
 
 
 .project-show-gallery {
-  img {
+  .thumbnail {
     max-height: 400px;
     max-width: 100%;
   }
+  .modal-dialog {
+    max-width: none;
+  }
+  .modal.show {
+    display:flex!important;
+  }
+  .illustration {
+    max-width: 100%;
+    max-height: 1000px;
+  }
 }
+
