improve illustrations modal

--- a/app/assets/stylesheets/components/_gallery.scss
+++ b/app/assets/stylesheets/components/_gallery.scss
@@ -13,6 +13,9 @@
   .modal-dialog {
     max-width: none;
   }
+  .modal {
+    display: none!important;
+  }
   .modal.show {
     display:flex!important;
   }
