add padding to illustration modal

--- a/app/assets/stylesheets/components/_gallery.scss
+++ b/app/assets/stylesheets/components/_gallery.scss
@@ -15,9 +15,16 @@
   }
   .modal {
     display: none!important;
+    padding-left: 15px;
   }
   .modal.show {
     display:flex!important;
+  }
+  .modal-content {
+    border: 1px solid white;
+  }
+  .modal-body {
+    padding: 0px;
   }
   .illustration {
     max-width: 100%;
