improve illustrations modal and grid

--- a/app/assets/stylesheets/components/_gallery.scss
+++ b/app/assets/stylesheets/components/_gallery.scss
@@ -7,7 +7,7 @@
 
 .project-show-gallery {
   .thumbnail {
-    max-height: 400px;
+    max-height: 370px;
     max-width: 100%;
   }
   .modal-dialog {
@@ -15,13 +15,14 @@
   }
   .modal {
     display: none!important;
-    padding-left: 15px;
   }
   .modal.show {
     display:flex!important;
+    padding: 0 10px;
   }
   .modal-content {
     border: 1px solid white;
+    margin: 3rem 0;
   }
   .modal-body {
     padding: 0px;
@@ -29,6 +30,29 @@
   .illustration {
     max-width: 100%;
     max-height: 1000px;
+  }
+}
+
+.gallery-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 10px;
+  .gallery-item {
+    text-align: center;
+  }
+}
+
+@media (min-width: 100px) and (max-width: 575px) {
+  .gallery-grid {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (min-width: 576px) and (max-width: 768px) {
+  .gallery-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
   }
 }
 
