--- a/app/assets/stylesheets/components/_gallery.scss
+++ b/app/assets/stylesheets/components/_gallery.scss
@@ -9,6 +9,16 @@
   .thumbnail {
     max-height: 370px;
     max-width: 100%;
+    border: 2px solid white;
+    border-radius: 5px;
+    transition: all 250ms ease;
+    cursor: pointer;
+  }
+  .thumbnail:hover {
+    box-shadow: 6px 4px 1px #61e786;
+    border: 2px solid $gray;
+  }
+  .thumbnail {
   }
   .modal-dialog {
     max-width: none;
@@ -31,6 +41,12 @@
     max-width: 100%;
     max-height: 1000px;
   }
+  .close {
+    position: absolute;
+    right: 0px;
+    top: -40px;
+    z-index: 2;
+  }
 }
 
 .gallery-grid {
@@ -41,6 +57,7 @@
     text-align: center;
   }
 }
+
 
 @media (min-width: 100px) and (max-width: 575px) {
   .gallery-grid {
