--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -36,13 +36,16 @@
           <%= cl_image_tag photo.key, class: 'thumbnail', 'data-toggle'=> 'modal', 'data-target' => "#photo-#{photo.key}" %>
           <!-- Modal -->
           <div class="modal fade" id="photo-<%= photo.key %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-              <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                  <div class="modal-body">
-                    <%= cl_image_tag photo.key, class: 'illustration' %>
-                  </div>
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+                <div class="modal-body">
+                  <%= cl_image_tag photo.key, class: 'illustration' %>
                 </div>
               </div>
+            </div>
           </div>
         </div>
       <% end %>
