--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -33,7 +33,7 @@
     <div class="gallery-grid">
       <% @project.photos.each do |photo| %>
         <div class="gallery-item">
-          <%= cl_image_tag photo.key, class: 'thumbnail', 'data-toggle'=> 'modal', 'data-target' => "#photo-#{photo.key}" %>
+          <%= cl_image_tag photo.key, height: 370, crop: :fill, class: 'thumbnail', 'data-toggle'=> 'modal', 'data-target' => "#photo-#{photo.key}" %>
           <!-- Modal -->
           <div class="modal fade" id="photo-<%= photo.key %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
