--- a/app/assets/stylesheets/components/_project_show.scss
+++ b/app/assets/stylesheets/components/_project_show.scss
@@ -39,13 +39,16 @@
     width: 100%;
     max-width: 650px;
     border-radius: 5px;
+    border: 1px solid lightgray;
   }
 }
 
 .project-show-photos {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  align-items: center;
   grid-gap: 10px;
+  margin-bottom: 50px;
   .gallery-item {
     text-align: center;
   }
@@ -53,11 +56,24 @@
     max-height: 300px;
     max-width: 100%;
     border-radius: 5px;
+    border: 1px solid lightgray;
+  }
+  .project-show-photo {
+    text-align: center;
   }
 }
 
+@media (min-width: 100px) and (max-width: 575px) {
+  .project-show-photos {
+    grid-template-columns: 1fr;
+  }
+}
 
-
+@media (min-width: 576px) and (max-width: 768px) {
+  .project-show-photos {
+    grid-template-columns: 1fr 1fr;
+  }
+}
 
 @media (min-width: 100px) and (max-width: 767px) {
   .project-show {
