--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -12,20 +12,22 @@
           <% if @project.graphic_design %><li><i class="fas fa-pencil-alt"></i> Graphic Design</li><% end %>
         </ul>
 
-        <p><b>Technologie used</b></p>
+        <p><b>Tools & Technology used</b></p>
         <% @project.technologies.each do |technology| %>
           <span class="technology"><%= technology %></span>
         <% end %>
       </div>
       <div class="project-show-cover-photo">
         <%= link_to @project.url, target: "_blank" do %>
-          <%= cl_image_tag @project.cover_photo.key %>
+          <%= cl_image_tag @project.cover_photo.key, width: 648, crop: :fit %>
         <% end %>
       </div>
     </div>
     <div class="project-show-photos">
       <% @project.photos.each do |photo| %>
-        <%= cl_image_tag photo.key %>
+        <div class="project-show-photo">
+          <%= cl_image_tag photo.key, height: 300, crop: :fit %>
+        </div>
       <% end %>
     </div>
   </div>
@@ -35,7 +37,7 @@
     <div class="gallery-grid">
       <% @project.photos.each do |photo| %>
         <div class="gallery-item">
-          <%= cl_image_tag photo.key, height: 370, crop: :fill, class: 'thumbnail', 'data-toggle'=> 'modal', 'data-target' => "#photo-#{photo.key}" %>
+          <%= cl_image_tag photo.key, height: 370, crop: :fit, class: 'thumbnail', 'data-toggle'=> 'modal', 'data-target' => "#photo-#{photo.key}" %>
           <!-- Modal -->
           <div class="modal fade" id="photo-<%= photo.key %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
