--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -3,7 +3,9 @@
     <div class="project-show">
       <div class="project-show-info">
         <h2 class="title"><%= @project.name %></h2>
-        <p><i class="fas fa-external-link-alt"></i> <%= link_to "Visit website", @project.url, target: "_blank" %></p>
+        <% if @project.url != '' %>
+          <p><i class="fas fa-external-link-alt"></i> <%= link_to "Visit website", @project.url, target: "_blank" %></p>
+        <% end %>
         <p class="description"><%= raw @project.description %></p>
         <p><b>What I did on this project</b></p>
         <ul class="list-unstyled">
