change text intro

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
       <div>
         <h1>renodor</h1>
         <h2>Fullstack Web Developer & Digital Marketing Specialist</h2>
-        <p>I build cool web applications. I have a strong experience in digital marketing working for companies like adidas and Under Armour. I also love to draw nice illustrations. So I can help you design, code and promote all your digital content.</p>
+        <p>I build cool web applications. I have a strong experience in digital marketing working for global companies like adidas and Under Armour. I also love to draw nice illustrations. I can help you design, code and promote all your digital content.</p>
 
       </div>
     </div>
