--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -47,7 +47,7 @@
   </div>
 
   <div class="section" id="contact">
-    <h2 class="title">Contact Me</h2>
+    <h2 class="title">Get in Touch</h2>
     <div class="social">
       <div class="social-icons">
         <a href="https://www.linkedin.com/in/renauddor/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
