--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container my-5">
   <%= simple_form_for(@project) do |f| %>
     <%= f.input :name %>
     <%= f.input :description %>
@@ -8,7 +8,7 @@
     <%= f.input :marketing %>
     <%= f.input :graphic_design %>
     <%= f.input :technologies %>
-    <%= f.input :cover_photo, as: :file %>
+    <%= f.input :cover_photo, as: :file, label: 'Cover Photo (686*515px)' %>
     <%= f.input :photos, as: :file, input_html: { multiple: true } %>
     <%= f.submit %>
   <% end %>
