Add published boolean to projects

--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -10,6 +10,7 @@
     <%= f.input :technologies %>
     <%= f.input :cover_photo, as: :file %>
     <%= f.input :photos, as: :file, input_html: { multiple: true } %>
+    <%= f.input :published %>
     <%= f.submit %>
   <% end %>
 </div>
